kubernetes/management/adminerevo/base/adminerevo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminerevo
  namespace: adminerevo
  labels:
    kalexlab.xyz/app: adminerevo
spec:
  type: ClusterIP
  ports:
    - name: adminerevo
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    kalexlab.xyz/app: adminerevo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminerevo
  namespace: adminerevo
  labels:
    kalexlab.xyz/app: adminerevo
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: adminerevo
  template:
    metadata:
      labels:
        kalexlab.xyz/app: adminerevo
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: adminerevo
          image: "registry.kalexlab.xyz/adminerevo:latest"
          imagePullPolicy: Always

          securityContext:
            readOnlyRootFilesystem: true

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              memory: 50Mi
              cpu: 10m
            limits:
              memory: 500Mi
              cpu: 200m

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 60

          volumeMounts:
            - mountPath: /var/www/html
              name: html
            - mountPath: /var/www/html/plugins-custom
              name: plugins
            - mountPath: /servers.php
              name: servers
              subPath: servers.php
            - mountPath: /tmp
              name: tmp

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: plugins
          configMap:
            name: adminerevo-config
        - name: servers
          secret:
            secretName: adminerevo-secrets
        - name: html
          emptyDir:
            sizeLimit: 1Gi
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
