kubernetes/management/adminerevo/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: adminerevo
  name: adminerevo-basic-auth
spec:
  basicAuth:
    secret: adminerevo-auth-secrets
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: adminerevo
  name: adminerevo-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`adminerevo.kalexlab.xyz`)
      services:
        - name: adminerevo
          port: 8080
      middlewares:
        - name: adminerevo-basic-auth
  tls:
    secretName: adminerevo-ingress-certificate-secret
